fixed issues concerning fetching of users
