# apps/api/docs/swagger.yaml
@@ -410,13 +410,7 @@ definitions:
     type: object
   authservice.SeedUserRequest:
     properties:
-      account_status:
-        type: string
       avatar:
-        type: string
-      bank_account_number:
-        type: string
-      bank_code:
         type: string
       current_city:
         type: integer
@@ -430,8 +424,6 @@ definitions:
         type: string
       education_level:
         type: string
-      educational_status:
-        type: string
       email:
         type: string
       fake_id:
@@ -439,10 +431,6 @@ definitions:
       first_name:
         type: string
       gender:
-        type: string
-      graduation_year:
-        type: string
-      highest_degree:
         type: string
       home_address:
         type: string
@@ -454,29 +442,17 @@ definitions:
         type: string
       middle_name:
         type: string
-      nin_verified:
-        type: string
-      party_id:
+      occupation_id:
         type: integer
       password:
         type: string
       phone:
         type: string
-      phone_verified:
-        type: string
       religion:
-        type: string
-      role:
-        type: string
-      role_level:
-        type: string
-      school_name:
         type: string
       state_of_origin:
         type: integer
       username:
-        type: string
-      voters_card_image:
         type: string
     type: object
   bodieshandler.CityResponse:
